[package]
name = "cbs"
version = "0.0.1"
authors = ["mahdi <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "clipboard for linux "
homepage = "https://github.com/robatipoor/clipboard-server"
keywords = ["clipboard", "server","linux","cli"]
license = "MIT/Apache-2.0"
repository = "https://github.com/robatipoor/clipboard-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
futures = "0.1.27"
tokio = "0.1.21"
bincode = "1.1.4"
serde_derive = "1.0.92"
serde = "1.0.92"
clipboard = "0.5.0"
hex = "0.3.2"
lazy_static = "1.3.0"
daemonize = "0.4.1"
users = "0.9.1"
env_logger = "0.6.1"
log = "0.4.6"
failure = "0.1.5"
clap = "2.33.0"
nix = "0.14.1"
ctrlc = { version = "3.1.3", features = ["termination"] }

[dev-dependencies]
dotenv = "0.14.1"
assert_cmd = "0.11"
