[package]
name = "cbs"
version = "0.0.5"
authors = ["mahdi robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "Command line clipboard manager "
homepage = "https://github.com/robatipoor/clipboard-server"
keywords = ["clipboard", "commandline","linux","cli"]
license = "MIT/Apache-2.0"
repository = "https://github.com/robatipoor/clipboard-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
env_logger = "0.6.1"
lazy_static = "1.3.0"
log = "0.4.6"
failure = "0.1.5"
clap = "2.33.0"
serde_derive = "1.0.94"
serde = "1.0.94"

[target.'cfg(target_family = "unix")'.dependencies]
futures = "0.1.28"
tokio = "0.1.21"
hex = "0.3.2"
daemonize = "0.4.1"
users = "0.9.1"
nix = "0.14.1"
ctrlc = { version = "3.1.3", features = ["termination"] }
bytes = "0.4.12"
bincode = "1.1.4"

[dev-dependencies]
assert_cmd = "0.11"
tokio = "0.1.21"