[package]
name = "cbs"
version = "0.2.0"
authors = ["mahdi robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "Command line clipboard manager "
homepage = "https://github.com/robatipoor/clipboard-server"
keywords = ["clipboard", "commandline","linux","cli"]
license = "MIT/Apache-2.0"
repository = "https://github.com/robatipoor/clipboard-server"

[[bin]]
name = "client"
path = "src/bin/client.rs" 

[[bin]]
name = "server"
path = "src/bin/server.rs" 

[dependencies]
clipboard = "0.5.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
clap = "3.0.0-beta.2"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
bytes = "1.0.1"
futures = "0.3.15"
bincode = "1.3.3"
confy = "0.4.0"
dirs = "3.0.2"
